--- a/src/Aside/Aside.css
+++ b/src/Aside/Aside.css
@@ -1,5 +1,5 @@
 aside {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width :500px;
     height: 750px;
     display: flex;
@@ -8,12 +8,41 @@ aside {
     overflow-y: auto; 
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    cursor: pointer;
+ 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 5px;
+    cursor: pointer;
+}
+::-webkit-scrollbar-track {
+    background-color: #c0c0c0;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+
 .clinicCard {
-    border: 1px gray solid ;
     display: flex;
+    min-height: 100px;
+    border: 2px solid gray;
+    align-items: center;
+    margin:  10px 0;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
+
+.clinicCard:hover {
+    background-color: #f2f2f2;
 }
 
 .clinicPic {
+    align-self: center;
     width: 50px;
     height: 50px;
 }
@@ -21,4 +50,10 @@ aside {
 .infoSection {
     display: flex;
     flex-direction: column;
+}
+.distanceContainer {
+    display: flex;
+}
+.mapPin {
+    color: #808080;
 }
