--- a/src/Aside/Aside.css
+++ b/src/Aside/Aside.css
@@ -1,7 +1,7 @@
 aside {
     /* border: 1px solid black; */
-    width :500px;
-    height: 750px;
+    width :35vw;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     margin: 10px auto;
@@ -28,8 +28,9 @@ aside {
 
 .clinicCard {
     display: flex;
-    min-height: 100px;
-    border: 2px solid gray;
+    min-height: 10vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: 2px solid #f4f4f4;
     align-items: center;
     margin:  10px 0;
     border-radius: 10px;
@@ -38,22 +39,41 @@ aside {
 }
 
 .clinicCard:hover {
-    background-color: #f2f2f2;
+    background-color: #ccd9c5;
 }
 
 .clinicPic {
     align-self: center;
-    width: 50px;
-    height: 50px;
+    width: 4vw;
+    height: 6vw;
+    padding-left: 0.5rem;
 }
 
 .infoSection {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    
+    padding: 0.5rem;
+    h4{
+        font-size: 1.2rem;
+    }
+   
+    .textSection{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0.5rem;
+        width: fit-content;
+    }
+
+  
 }
 .distanceContainer {
     display: flex;
+    align-items: center;
+    padding-left: 0.6rem;
 }
 .mapPin {
-    color: #808080;
+    color: #FC6969;
 }
