--- a/src/Aside/Aside.css
+++ b/src/Aside/Aside.css
@@ -1,6 +1,6 @@
 aside {
     /* border: 1px solid black; */
-    width :35vw;
+    width :80vh;
     /* height: fit-content; */
     display: flex;
     flex-direction: column;
