--- a/src/components/Announcements/Announcements.css
+++ b/src/components/Announcements/Announcements.css
@@ -11,9 +11,20 @@
 .announcementCard {
     display: flex;
     height: 90px;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    align-items: center;
+    transition:  all 150ms ease-in-out; 
+}
+.announcementCard:hover {
+    background-color: #bfbfbf;
 }
 
 .announcementInfo {
     width: 80%;
     padding-left: 1rem;
+}
+.announcementTime {
+    font-weight: bold;
 }
